# manager

./: CMakeLists.txt
src/: CryptoUtils.hpp  ReminderThread.hpp  Task.hpp  TaskManager.hpp  UserManager.hpp  main.cpp  qt_gui.cpp  qt_gui.h
